<resources>
    <string name="app_name">Гадания</string>
    <string name="button_start">Начать</string>
    <string name="button_show_prediction">Получить предсказание</string>
    <string name="button_calculate">Рассчитать</string>
    <string name="button_show_results">Посмотреть результат</string>
    <string name="china_caption">Китайские гадания</string>
    <string name="china_description">Древние китайцы верили, что человек участвует в жизни как активная сила.
        То есть люди не только зависят от множества обстоятельств и уготованной им кармы, но способны влиять
        на судьбу и окружающий мир. Поэтому китайские гадания отличаются от привычных нам способов познать будущее.</string>
    <string name="fate_book_main_caption">Гадание по Книге Перемен (И-Цзин)</string>
    <string name="fate_book_main_description">
        Китайская Книга Перемен содержит 64 пророчества-гексаграммы, которые были записаны
        более трех тысяч лет назад и до сих пор поражают своей способностью предсказывать будущее.
        Гексаграмма – это набор из шести черт, каждая из которых может быть либо непрерывной (янь), либо прерванной посередине (инь).\n
        Задайте свой вопрос и нажмите на кнопку \"Подбросить монеты\" 6 раз.</string>
    <string name="fate_book_divination_manual_0">Задайте свой вопрос и нажмите на кнопку \"Подбросить монеты\" 6 раз.</string>
    <string-array name="fate_book_divination_manual">
        <item>Нажмите на кнопку \"Подбросить монеты\" еще 5 раз.</item>
        <item>Нажмите на кнопку \"Подбросить монеты\" еще 4 раза.</item>
        <item>Нажмите на кнопку \"Подбросить монеты\" еще 3 раза.</item>
        <item>Нажмите на кнопку \"Подбросить монеты\" еще 2 раза.</item>
        <item>Нажмите на кнопку \"Подбросить монеты\" еще 1 раз.</item>
        <item>Нажмите на кнопку \"Получить предсказание\".</item>
    </string-array>
    <string name="button_fate_book_toss_a_coin">Подбросить монеты </string>
    <string name="fate_book_divination_in">Инь</string>
    <string name="fate_book_divination_yan">Ян</string>
    <string name="ekaterina_caption">Гадание Екатерины II</string>
    <string name="ekaterina_description">В этом гадании вам будут предложены 3 карточки.
        Последовательность карточек имеет очень важное значение, так как поможет вам в толковании полученного предсказания.\n\n
        Например: Церковь (перемены в жизни), Корабль (путешествие), Месяц со звездами (знакомство).\n
        Толкование: Перемены в жизни подарят вам приятное путешествие и новое знакомство.</string>
    <string name="domino_caption">Гадания на домино</string>
    <string name="domino_description">Гадание на одной кости домино поможет ответить на волнующий вас вопрос.\n\n
        Гадание на трех костях расскажет о прошлом, настоящем и будущем.\n\n
        Гадание на семи костях раскроет основные тенденции и события каждого из семи дней недели.</string>
    <string name="jewish_caption">Еврейские гадания</string>
    <string name="jewish_description">Евреи не только внесли большой вклад в культуру и науку, но еще и сотворили потрясающее
        таинственное священное учение - каббалу. Согласно учению, Господь при творении Мира руководствовался некими символами,
        которые затем были переданы избранному народу в виде цифр и букв.</string>
    <string name="kabbala_caption">Каббала</string>
    <string name="kabbala_description">Основа кабалистической магии заключается в вере в священное обозначение букв алфавита евреев.
        Это древнее гадание на характер и судьбу человека для предсказаний использует числа, зашифрованные в имени. Для получения портрета
        человека, необходимо ввести фамилию и имя интересующей вас особы.</string>
    <string name="kabala_manual">Введите фамилию и имя человека и нажмите \"Рассчитать\".</string>
    <string name="kabala_manual_result">Нажмите на кнопку "Посмотреть результаты".</string>
    <string name="jewish_question_caption">Ответ на вопрос</string>
    <string name="jewish_question_description">Этот способ несколько напоминает кабалистические приемы. Задается вопрос, на который можно ответить \"Да\" или \"Нет\".
        Из вопроса выкидываются гласные буквы, а под оставшимися ставятся соответствующие цифры. Затем цифры перемножаются, а произведение делится на 7.
        По полученному остатку и дню недели можно узнать ответ на интересующий вопрос. </string>
    <string name="africa_caption">Африканские гадания</string>
    <string name="africa_description">Известно, что африканские гадатели лучшие в мире. В древние времена гадатель мог предсказать будущие события лишь по звуку
     мелких камешков, которые он тряс в бутылке.</string>
    <string name="coffee_caption">Гадание на кофе</string>
    <string name="coffee_description">В качестве инструмента для этого гадания используют обычные зерна кофе: 16 кофейных зерен бросают на ровную поверхность
        и смотрят сколько из них упали ложбинкой вверх. Сосредоточьтесь на проблеме, которая вас интересует и нажмите на кнопку \"Получить предсказание\".</string>
    <string name="fa_caption">Открывая глаза Фа</string>
    <string name="fa_description">Одна из африканских легенд рассказывает о боге Фа, имевшем бесчисленное множество глаз, каждый из которых выглядел как орех, 
        растущий на пальме. По утрам, едва раскрыв все свои многочисленные очи, бог начинал пророчествовать смертным, собравшимся перед его святилищем. 
        В память о древнем божестве в Африке до сих пор бытует гадание под названием «Открыть глаза Фа», для которого используют 4 монетки, символизирующие глаза бога.
        Мысленно задайте вопрос и нажмите на кнопку \"Получить предсказание\". Те, что выпадут вверх орлом, символизируют отрицательный результат,
        а выпавшие решкой — положительный.</string>
    <string name="fa_yes">Ответ на вопрос положительный.</string>
    <string name="fa_no">Ответ на вопрос отрицательный. Стоит проявить осторожность, чтобы не впутаться в неприятности.</string>
    <string name="fa_unknown">На данный момент на вопрос нельзя дать точный ответ.</string>
    <string name="spider_caption">С помощью паука</string>
    <string name="spider_description">Гадание с помощью паука пользуется большой популярностью среди африканских племён, поскольку они считают это насекомое
        творцом Вселенной, который держит в своих тонких лапках все нити человеческого бытия. Для гадания коротко запишите 5 своих желаний и нажмите на кнопку
        \"Получить предсказание\". Те бумажки, которые паук перевернет или покроет своей паутиной, содержат описание того, что сбудется скорее всего.</string>
    <string name="spider_manual">Введите 5 желаний.</string>
    <string name="spider_result_caption">Эти желания исполнятся:</string>
    <string name="japan_caption">Японские гадания</string>
    <string name="japan_description">Япония завораживает нас, европейцев, своими традициями, обрядами, привычками. Мы тянемся к их поэзии, к их ритуалам и
        даже не подозреваем, что совсем не обязательно изучать японскую магию, чтобы использовать местные традиции и искусство для гадания.</string>
    <string name="mokuso_caption">Мокусо дзей</string>
    <string name="mokuso_description">Гадание «Мокусо Дзей» - это одно из старейших национальных гаданий Японии.
        Это гадание схоже с гаданием по книге перемен И-цзин, однако вместо монет берутся обычные бамбуковые
        палочки с нанесенными на них символами - точка или две точки. В зависимости от последовательности
        выпавших символов строится фигура, каждая из которых имеет свое значение. Задайте свой вопрос и
        нажмите на кнопку \"Получить предсказание\".</string>
    <string name="hokku_caption">Гадание на хокку</string>
    <string name="hokku_description">Это гадание даст ответ на ваш вопрос в форме классического японского хокку великих поэтов. Для этого задайте свой вопрос или
        загадайте желание и нажмите на кнопку \"Получить предсказание\". Вместе с хокку вы получите одно из его возможных толкований, однако вы и сами можете
        попробовать найти в строках ответ на свой вопрос. </string>
    <string name="interpretation">Толкование:</string>
    <string name="tibet_caption">Тибетские гадания</string>
    <string name="tibet_description">В тибетской культуре гадание всегда занимало важное место. Древние цари Тибета обычно повелевали страной с помощью 
        двух основных друнг (законов мудрости): дэу и бон. «Бон» – это религиозно-философское учение Тибета, а от слова «Дэy», происходящего, вероятно, 
        из древнего языка Шанг-Шунга, берет начало название древней системы гадания, ставшей источником того, что ныне называют «Мо».</string>
    <string name="mo_caption">Гадание Мо</string>
    <string name="mo_description">Тибетское гадание МО уходит своими корнями в культуру и обычаи древнего Тибета. В гадании используется шесть символов:
        АХ, РА, ПА, НА, ЦА, ДХИ. Сосредоточьтесь на своем вопросе или проблеме и нажмите на кнопку \"Получить предсказание\" - выпавшее сочетание двух символов
        даст вам ответ.</string>
    <string name="mo_tasks">Задачи</string>
    <string name="mo_family">Семья</string>
    <string name="mo_things">Имущество</string>
    <string name="mo_private_life">Личная жизнь</string>
    <string name="mo_friends">Друзья</string>
    <string name="mo_enemyes">Враги</string>
    <string name="mo_rest">Отдых</string>
    <string name="mo_health">Здоровье</string>
    <string name="mo_self_improvement">Самосовершенствование</string>
    <string name="mo_business">Конкретное дело</string>
    <string name="mo_rosary_caption">Гадание МО на четках</string>
    <string name="mo_rosary_description">Для этого гадания используются буддийские четки из 108 бусин. Четки делят на три части, так, чтобы в каждой части
        остались одна, две или три бусины, а по полученному сочетанию смотрят ответ на свой вопрос. Гадание помогает ответить на вопрос, соответствующий
        одной из шести ЧА.</string>
    <string name="mo_rosary_manual">Выберите ЧА, на которое хотите получить ответ</string>
    <string-array name="mo_rosary_cha">
        <item>Придет человек или нет? (дрон ча)</item>
        <item>Следует ли что-то покупать? (цонг ча)</item>
        <item>Следует ли отправляться в дорогу? (лам ча)</item>
        <item>Полезно ли то или иное с духовной точки зрения? (чо ча)</item>
        <item>Пойдут ли семейные дела хорошо или нет? (ким ча)</item>
        <item>Исполнится ли желание? (тон ча)</item>
    </string-array>
    <string-array name="zodiak">
        <item>Овен</item>
        <item>Телец</item>
        <item>Близнецы</item>
        <item>Рак</item>
        <item>Лев</item>
        <item>Дева</item>
        <item>Весы</item>
        <item>Скорпион</item>
        <item>Стрелец</item>
        <item>Козерог</item>
        <item>Водолей</item>
        <item>Рыбы</item>
    </string-array>
    <string name="zodiak_caption">Гороскоп по Знаку Зодиака</string>
    <string name="zodiak_description">В Индии существует традиция: перед вступлением в брак жених и невеста заказывают свой гороскоп совместимости у астролога.
        При этом неблагоприятное сочетание знаков зодиака способно даже разрушить свадьбу: заключение астролога является чуть ли не официальным разрешением на брак!</string>
    <string name="main_zodiak">Общий гороскоп</string>
    <string name="love_zodiak">Любовный гороскоп</string>
    <string name="compatibility_zodiak">Гороскоп совместимости</string>
    <string name="choose_zodiak">Выберите знак зодиака</string>
    <string name="choose_gender">Выберите пол</string>
    <string name="choose_zodiak_man">Выберите знак зодиака мужчины</string>
    <string name="choose_zodiak_woman">Выберите знак зодиака женщины</string>
    <string name="compatibility">Совместимость</string>
    <string name="button_show_goroskop">Получить гороскоп</string>
    <string name="zodiak_aries">Овен</string>
    <string name="zodiak_taurus">Телец</string>
</resources>