<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
style="@style/linearLayoutMainStyle"
tools:context="lili.tesla.foxdivination.presentation.screen.japan.mokuso.main.view.MokusoMainActivity">

<RelativeLayout
    style="@style/ScrollViewStyle">

    <LinearLayout
        android:id="@+id/ll_mokuso_main"
        style="@style/MainLinearLayoutStyle">

        <ImageView
            android:id="@+id/image_mokuso_main"
            android:background="@drawable/mokuso"
            style="@style/mainImageStyle"/>

        <TextView
            android:id="@+id/textview_mokuso_main_caption"
            android:text="@string/mokuso_caption"
            style="@style/MainCaptionStyle"/>

        <TextView
            android:id="@+id/textview_mokuso_main_description"
            android:text="@string/mokuso_description"
            style="@style/MainDescriptionStyle"/>

    </LinearLayout>

    <Button
        android:id="@+id/button_mokuso_main_start"
        android:text="@string/button_show_prediction"
        android:layout_above="@+id/button_mokuso_main_back"
        style="@style/showResultButtonStyle"
        android:layout_centerHorizontal="true"/>

    <ImageButton
        android:id="@id/button_mokuso_main_back"
        style="@style/buttonBackStyle" />

</RelativeLayout>

</LinearLayout>
