<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
style="@style/linearLayoutMainStyle"
tools:context=".presentation.screen.jewish.kabbala.main.view.KabbalaMainActivity">

   <RelativeLayout
       style="@style/ScrollViewStyle">

       <LinearLayout
           android:id="@+id/ll_kabbala_main"
           style="@style/MainLinearLayoutStyle">

           <ImageView
               android:id="@+id/image_kabbala_main"
               android:background="@drawable/kabbala"
               style="@style/mainImageStyle" />

           <TextView
               android:id="@+id/textview_kabbala_main_caption"
               android:text="@string/kabbala_caption"
               style="@style/MainCaptionStyle" />

           <TextView
               android:id="@+id/textview_kabbala_main_description"
               android:text="@string/kabbala_description"
               style="@style/MainDescriptionStyle" />

       </LinearLayout>

       <Button
           android:id="@+id/button_kabbala_main_start"
           android:text="@string/button_start"
           style="@style/showResultButtonStyle"
           android:layout_centerHorizontal="true"
           android:layout_above="@+id/button_kabbala_main_back"/>


       <ImageButton
           android:id="@id/button_kabbala_main_back"
           style="@style/buttonBackStyle" />

   </RelativeLayout>

</LinearLayout>

