<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
style="@style/linearLayoutMainStyle"
tools:context="lili.tesla.foxdivination.presentation.screen.africa.coffee.main.view.CoffeeMainActivity">

    <RelativeLayout
        style="@style/ScrollViewStyle">

        <LinearLayout
            android:id="@+id/ll_coffee_main"
            style="@style/MainLinearLayoutStyle">

            <ImageView
                android:id="@+id/image_coffee_main"
                android:background="@drawable/coffee"
                style="@style/mainImageStyle"/>

            <TextView
                android:id="@+id/textview_coffee_main_caption"
                android:text="@string/coffee_caption"
                style="@style/MainCaptionStyle"/>

            <TextView
                android:id="@+id/textview_coffee_main_description"
                android:text="@string/coffee_description"
                style="@style/MainDescriptionStyle"/>

        </LinearLayout>

        <Button
            android:id="@+id/button_coffee_main_start"
            android:layout_above="@+id/button_coffee_main_back"
            android:text="@string/button_show_prediction"
            android:layout_centerHorizontal="true"
            style="@style/showResultButtonStyle"/>

        <ImageButton
            android:id="@id/button_coffee_main_back"
            style="@style/buttonBackStyle" />

    </RelativeLayout>

</LinearLayout>