<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/linearLayoutMainStyle"
    tools:context="lili.tesla.foxdivination.presentation.screen.japan.hokku.main.view.HokkuMainActivity">

    <RelativeLayout
        style="@style/ScrollViewStyle">

        <LinearLayout
            android:id="@+id/ll_hokku_main"
            style="@style/MainLinearLayoutStyle">

            <ImageView
                android:id="@+id/image_hokku_main"
                android:background="@drawable/hokku"
                style="@style/mainImageStyle"/>

            <TextView
                android:id="@+id/textview_hokku_main_caption"
                android:text="@string/hokku_caption"
                style="@style/MainCaptionStyle"/>

            <TextView
                android:id="@+id/textview_hokku_main_description"
                android:text="@string/hokku_description"
                style="@style/MainDescriptionStyle"/>

        </LinearLayout>

        <Button
            android:id="@+id/button_hokku_main_start"
            android:text="@string/button_show_prediction"
            android:layout_above="@+id/button_hokku_main_back"
            android:layout_centerHorizontal="true"
            style="@style/showResultButtonStyle"/>


        <ImageButton
            android:id="@+id/button_hokku_main_back"
            style="@style/buttonBackStyle" />

    </RelativeLayout>

</LinearLayout>
