<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/linearLayoutMainStyle"
    tools:context="lili.tesla.foxdivination.presentation.screen.china.mainChina.view.ChinaActivity">

    <RelativeLayout
        style="@style/ScrollViewStyle">

        <LinearLayout
            android:id="@+id/ll_fatebook_main"
            style="@style/MainLinearLayoutStyle">

            <ImageView
                android:id="@+id/image_fatebook_main"
                android:background="@drawable/ekaterina_book"
                style="@style/mainImageStyle"/>

            <TextView
                android:id="@+id/textview_fatebook_main_caption"
                android:text="@string/fate_book_main_caption"
                style="@style/MainCaptionStyle"/>

            <TextView
                android:id="@+id/textview_fatebook_main_description"
                android:text="@string/fate_book_main_description"
                style="@style/MainDescriptionStyle"/>

        </LinearLayout>

        <Button
            android:id="@+id/button_fatebook_main_start"
            android:text="@string/button_start"
            android:layout_above="@+id/button_fatebook_main_back"
            android:layout_centerHorizontal="true"
            style="@style/showResultButtonStyle"/>


        <ImageButton
            android:id="@id/button_fatebook_main_back"
            style="@style/buttonBackStyle" />

    </RelativeLayout>

</LinearLayout>
